--- a/testsuite/run_sets/build_validation_add_activation_keys.yml
+++ b/testsuite/run_sets/build_validation_add_activation_keys.yml
@@ -3,5 +3,5 @@
 # This yaml file contains all the features performing the creation of custom channels
 # for each Maintenance Update
 
-## QAM Add Activation Keys BEGIN ###
+## Add Activation Keys BEGIN ###
 
