--- a/testsuite/run_sets/build_validation_core.yml
+++ b/testsuite/run_sets/build_validation_core.yml
@@ -1,12 +1,17 @@
-# This file describes the order of features in a QAM test-suite run.
+# This file describes the order of features in a QAM or Build Validation test-suite run.
 #
 # This test-suite is prepared to run a Maintenance Update test passing by parameter (env. variable) a JSON type
 # containing a dictionary with clients and their salt & traditional repositories
 # We might also need an upgrade of packages in server side, on that case, sumaform will handle the update on deployment stage.
 # It will run in a clean environment, not in a long-running server, so we don't need to take care of cleaning.
 
-## QAM Init Proxy BEGIN ###
+## Core features BEGIN ###
 
-- features/qam/init_clients/proxy.feature
+# IMMUTABLE ORDER
 
-## QAM Init Proxy END ###
+- features/core/first_settings.feature
+
+# Configuration channel and configuration file for smoke tests
+- features/build_validation/srv_add_configuration_channel_and_file.feature
+
+## Core features END ###
