--- a/testsuite/run_sets/build_validation_finishing.yml
+++ b/testsuite/run_sets/build_validation_finishing.yml
@@ -1,4 +1,4 @@
-# This file describes the order of features in a QAM test-suite run.
+# This file describes the order of features in a QAM or Build Validation test-suite run.
 #
 # This test-suite is prepared to run a Maintenance Update test passing by parameter (env. variable) a JSON type
 # containing a dictionary with clients and their salt & traditional repositories
@@ -6,7 +6,7 @@
 # It will run in a clean environment, not in a long-running server, so we don't need to take care of cleaning.
 
 
-## Post run QAM features BEGIN ##
+## Post run features BEGIN ##
 
 # IMMUTABLE ORDER
 
